# ws-demo-poly4

./: .coverage  .dockerignore  .env.example  .env.test  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/instructions/: code-review-python.instructions.md  code-review.instructions.md  general.instructions.md
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py  service_assignments.py  services.py
app/core/: auth.py  config.py  database.py  logger.py
app/middleware/: __init__.py  permissions.py  tenant_isolation.py
app/models/: __init__.py  auth.py  configuration.py  service.py  service_assignment.py  service_feature.py  service_role.py  tenant.py  tenant_service_assignment.py
app/repositories/: __init__.py  cache_service.py  configuration_repository.py  cosmos_client.py  service_assignment_repository.py  service_repository.py  tenant_repository.py
app/routes/: configuration_routes.py  service_routes.py
app/schemas/: __init__.py  service.py  service_assignment.py  service_feature.py  tenant.py
app/services/: __init__.py  configuration_service.py  service_assignment_service.py  service_management.py  service_service.py  tenant_client.py  (+1 more)
docs/: SERVICE_MANAGEMENT_API.md  api-specification.md  component-design.md
infra/: container-app.bicep
scripts/: README.md  create_containers.py  seed_data.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_dependencies.py  test_main.py  test_middleware.py  test_service_api.py
(+76 files in other folders)
